--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,15 @@
           <version>0.9</version>
       </dependency>
       <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <version>28.1-android</version>
+      </dependency>  
+      <dependency>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
           <version>4.7</version>
           <scope>test</scope>
-      </dependency>
+      </dependency>  
   </dependencies>
 </project>
