--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>7</maven.compiler.source>
+    <maven.compiler.target>7</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -19,6 +21,11 @@
           <groupId>org.apache.mahout</groupId>
           <artifactId>mahout-core</artifactId>
           <version>0.9</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-compress</artifactId>
+          <version>1.18</version>
       </dependency>
       <dependency>
           <groupId>com.google.guava</groupId>
